--- a/01_expanding_cards/index.html
+++ b/01_expanding_cards/index.html
@@ -9,29 +9,28 @@
 </head>
 <body>
    <div class="container">
-      <div class="panel active" style="background-image: url('img/explore-the-world.jpg');">
+      <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1501555088652-021faa106b9b?q=80&w=2673&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>Explore The World</h3>
       </div>
-      <div class="panel" style="background-image: url('img/green-grass.jpg');">
+      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1594220862488-117b78382514?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>Green Grass</h3>
       </div>
-      <div class="panel" style="background-image: url('img/beach-dreams.jpg');">
+      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=2673&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>Beach Dreams</h3>
       </div>
-      <div class="panel" style="background-image: url('img/see-nature.jpg');">
+      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>See Nature</h3>
       </div>
-      <div class="panel" style="background-image: url('img/rainy-day.jpg');">
+      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>Rainy Day</h3>
       </div>
-      <div class="panel" style="background-image: url('img/mountain-range.jpg');">
+      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1454496522488-7a8e488e8606?q=80&w=2676&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>Mountain Range</h3>
       </div>
-      <div class="panel" style="background-image: url('img/smell-the-flowers.jpg');">
+      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1519378058457-4c29a0a2efac?q=80&w=2608&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
          <h3>Smell The Flowers</h3>
       </div>
    </div>
 
    <script src="script.js"></script>
 </body>
-</html>
