Modified index.html and style.css

--- a/03_rotating_navigation/index.html
+++ b/03_rotating_navigation/index.html
@@ -21,12 +21,11 @@
       </div>
 
       <div class="content">
-         <h1>Amazing Article</h1>
-         <small>Sidney Shafer</small>
+         <h1>Article Title</h1>
+         <small>Author Name</small>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque sed quisquam. Placeat repellat cumque labore ipsa nostrum! Quas a consequatur porro voluptas distinctio in alias, tenetur ex reprehenderit magnam saepe excepturi hic expedita ullam! Deserunt consequuntur distinctio, optio iure repellendus accusamus praesentium rerum, beatae sunt nostrum nesciunt aperiam eaque. <br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos magni rerum at enim numquam voluptate dolorem quaerat necessitatibus neque beatae molestias officia rem cumque minima earum eaque, inventore maxime! Mollitia delectus consequatur natus iste quis, rerum adipisci ad ipsam nostrum, aperiam corporis! Libero nihil, dolore accusamus a est repudiandae dolor quo magni earum! Omnis deleniti expedita voluptates, sunt aut aspernatur magnam necessitatibus? At assumenda nobis beatae voluptates, ducimus officia doloribus odio repellendus. Molestias, placeat aliquam.</p>
 
-         <h3>My Dog</h3>
-         <img src="img/dog1.jpg" alt="doggy">
+         <h3>Section Heading</h3>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, officiis! Blanditiis id qui facilis, ut, quas sapiente fuga similique illo mollitia velit aspernatur soluta iure aliquid accusantium quisquam voluptatum! Nulla non assumenda voluptatem dolorum deleniti magni dicta. <br><br> Alias delectus molestias animi itaque, vero, perferendis repudiandae sint doloremque omnis autem quidem, nulla cum assumenda? Id vero consequatur eum, excepturi, repellendus debitis qui laudantium dolorem natus molestiae earum amet exercitationem ducimus quia dolor. Odio facilis provident aliquam.</p>
       </div>
    </div>
