--- a/10_dad_jokes/index.html
+++ b/10_dad_jokes/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
    <meta charset="UTF-8">
@@ -9,9 +8,9 @@
 </head>
 <body>
    <div class="container">
-      <h3>Don't Laugh Challenge</h3>
+      <h3>Don't Laugh Challenge 😂</h3>
       <div id="joke" class="joke"></div>
-      <button id="jokeBtn" class="btn">Get Another Joke</button>
+      <button id="jokeBtn" class="btn">get another joke</button>
    </div>
 
    <script src="script.js"></script>
