Change color and text

--- a/11_event_keycodes/index.html
+++ b/11_event_keycodes/index.html
@@ -11,7 +11,7 @@
    <div id="insert">
 
       <div class="key">
-         Press Key To Get KeyCode
+         Press Key to Get Code
       </div>
    </div>
 
