--- a/13_random_choice_picker/index.html
+++ b/13_random_choice_picker/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="container">
-      <h3>Enter all of the choices divided by a comma (',').<br> Press enter when you are done</h3>
+      <h3>Enter all of the choices divided by a comma ( , ).<br> Press enter when you are done</h3>
       <textarea placeholder="Enter choices here..." id="textarea"></textarea>
 
       <div id="tags"></div>
