--- a/01-expanding-image-cards/index.html
+++ b/01-expanding-image-cards/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Expanding Cards</title>
+   <title>Expanding Image Cards</title>
 </head>
 <body>
   <p>Click an image to expand</p>
