--- a/16-hydration-tracker/index.html
+++ b/16-hydration-tracker/index.html
@@ -3,12 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
    <link rel="stylesheet" href="style.css">
-   <title>Drink Water</title>
+   <title>Hydration Tracker</title>
 </head>
 <body>
-   <h1>Drink Water</h1>
+   <h1>Hydration Tracker</h1>
    <h3>Goal: 2 Liters</h3>
 
    <div class="cup">
@@ -20,7 +19,7 @@
       <div id="percentage" class="percentage"></div>
    </div>
 
-   <p class="text">Select how many glasses of water you have drank.</p>
+   <p class="text">Select how many glasses of water you have drank</p>
 
    <div class="cups">
       <div class="cup cup-small">250 ml</div>
