Change image url

--- a/18_background_slider/index.html
+++ b/18_background_slider/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
    <div class="slider-container">
-      <div class="slide active" style="background-image: url('img/img1.jpg');"></div>
+      <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1710270822125-6614bd66311f?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img2.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1682686578023-dc680e7a3aeb?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img3.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1707343844436-37580f155ed2?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img4.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1709238672317-9464e3d278e2?q=80&w=2575&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img5.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1710270822145-252ef537ffa6?q=80&w=2691&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img6.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1710505293699-a98ba8cb830a?q=80&w=2675&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img7.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1707343843598-39755549ac9a?q=80&w=2664&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
-      <div class="slide" style="background-image: url('img/img8.jpg');"></div>
+      <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1707343848723-bd87dea7b118?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
 
       <button class="arrow left-arrow" id="left">
          <i class="fas fa-arrow-left"></i>
