--- a/21_drag_n_drop/index.html
+++ b/21_drag_n_drop/index.html
@@ -4,16 +4,19 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Drag N Drop</title>
+   <title>Image Drag & Drop</title>
 </head>
 <body>
-   <div class="empty">
-      <div class="fill" draggable="true"></div>
-   </div>
-   <div class="empty"></div>
-   <div class="empty"></div>
-   <div class="empty"></div>
-   <div class="empty"></div>
+  <p>Click and hold the image to drop in a new box</p>
+  <div class="container">
+     <div class="empty">
+        <div class="fill" draggable="true"></div>
+     </div>
+     <div class="empty"></div>
+     <div class="empty"></div>
+     <div class="empty"></div>
+     <div class="empty"></div>
+  </div>
 
    <script src="script.js"></script>
 </body>
