Change width and height of canvas

--- a/22_drawing_app/index.html
+++ b/22_drawing_app/index.html
@@ -3,12 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
    <link rel="stylesheet" href="style.css">
-   <title>Drawing App</title>
+   <title>Drawing Board</title>
 </head>
 <body>
-   <canvas id="canvas" width="800" height="800"></canvas>
+   <canvas id="canvas" width="500" height="500"></canvas>
    <div class="toolbox">
       <button id="decrease">-</button>
       <span id="size">10</span>
