--- a/23_kinetic_css_loader/index.html
+++ b/23_kinetic_css_loader/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css">
-   <title>Kinetic CSS Loader</title>
-</head>
-<body>
-   <div class="kinetic"></div>
-
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+      <title>CSS Loader Effect</title>
+   </head>
+   <body>
+      <div class="kinetic"></div>
+      
+   </body>
 </html>
