Update image url

--- a/26_double_vertical_slider/index.html
+++ b/26_double_vertical_slider/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
    <link rel="stylesheet" href="style.css">
-   <title>Double Vertical Slider</title>
+   <title>Image Slider</title>
 </head>
 <body>
    <div class="slider-container">
@@ -24,7 +24,7 @@
          </div>
          <div style="background-color: #A4CFDC;">
             <h1>Ocean Side</h1>
-            <p>dolphin land</p>
+            <p>see beautiful waves</p>
          </div>
          <div style="background-color: #D3E6EB;">
             <h1>Cool Car</h1>
@@ -36,12 +36,12 @@
          </div>
       </div>
       <div class="right-slide">
-         <div style="background-image: url(./img/img9.jpg);"></div>
-         <div style="background-image: url(./img/img6.jpg);"></div>
-         <div style="background-image: url(./img/img5.jpg);"></div>
-         <div style="background-image: url(./img/img4.jpg);"></div>
-         <div style="background-image: url(./img/img3.jpg);"></div>
-         <div style="background-image: url(./img/img1.jpg);"></div>
+         <div style="background-image: url('https://images.unsplash.com/photo-1429823040067-2c31b1d637ae?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y2l0eSUyMHNjYXBlfGVufDB8fDB8fHww');"></div>
+         <div style="background-image: url('https://images.unsplash.com/photo-1489824904134-891ab64532f1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnxlbnwwfHwwfHx8MA%3D%3D');"></div>
+         <div style="background-image: url('https://images.unsplash.com/photo-1501426026826-31c667bdf23d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGJlYWNofGVufDB8fDB8fHww');"></div>
+         <div style="background-image: url('https://images.unsplash.com/photo-1619409437363-1b1d6e539836?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHNhbmQlMjBkdW5lc3xlbnwwfHwwfHx8MA%3D%3D');"></div>
+         <div style="background-image: url('https://images.unsplash.com/photo-1538370965046-79c0d6907d47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Z2FsYXh5fGVufDB8fDB8fHww');"></div>
+         <div style="background-image: url('https://images.unsplash.com/photo-1585409677983-0f6c41ca9c3b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW91bnRhaW4lMjByYW5nZXxlbnwwfHwwfHx8MA%3D%3D');"></div>
       </div>
       <div class="action-buttons">
          <button class="down-button">
