--- a/27-image-slider/index.html
+++ b/27-image-slider/index.html
@@ -11,28 +11,28 @@
    <div class="slider-container">
       <div class="left-slide">
          <div style="background-color: #FCB7B7;">
-            <h1>Mountain Side</h1>
-            <p>explore the range</p>
+            <h1>Image Title</h1>
+            <p>description text</p>
          </div>
          <div style="background-color: #272454;">
-            <h1>Galaxy</h1>
-            <p>look up to the sky</p>
+            <h1>Image Title</h1>
+            <p>description text</p>
          </div>
          <div style="background-color: #EABC4C;">
-            <h1>Sand Dune</h1>
-            <p>in the desert winds</p>
+            <h1>Image Title</h1>
+            <p>description text</p>
          </div>
-         <div style="background-color: #A4CFDC;">
-            <h1>Ocean Side</h1>
-            <p>see beautiful waves</p>
+         <div style="background-color: #48cae4;">
+            <h1>Image Title</h1>
+            <p>description text</p>
          </div>
-         <div style="background-color: #D3E6EB;">
-            <h1>Cool Car</h1>
-            <p>chillin at the beach</p>
+         <div style="background-color: #81b29a;">
+            <h1>Image Title</h1>
+            <p>description text</p>
          </div>
-         <div style="background-color: #F4ECCD;">
-            <h1>City Scape</h1>
-            <p>life from up above</p>
+         <div style="background-color: #8d99ae;">
+            <h1>Image Title</h1>
+            <p>description text</p>
          </div>
       </div>
       <div class="right-slide">
