--- a/28_github_profiles/index.html
+++ b/28_github_profiles/index.html
@@ -1,39 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css">
-   <title>Github Profiles</title>
-</head>
-<body>
-   <form class="user-form" id="form">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Github Profile Search</title>
+  </head>
+  <body>
+    <form class="user-form" id="form">
       <input type="text" id="search" placeholder="Search a Github User">
-   </form>
+    </form>
 
-   <main id="main">
-      <div class="card">
-         <div>
-            <img src="https://randomuser.me/api/portraits/men/30.jpg" alt="" class="avatar">
-         </div>
-         <div class="user-info">
-            <h2>John Doe</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, alias.</p>
-            <ul>
-               <li>300 <strong>Followers</strong></li>
-               <li>100 <strong>Following</strong></li>
-               <li>30 <strong>Repos</strong></li>
-            </ul>
-            <div id="repos">
-               <a href="#" class="repo">Repo 1</a>
-               <a href="#" class="repo">Repo 2</a>
-               <a href="#" class="repo">Repo 3</a>
-            </div>
-         </div>
-      </div>
-   </main>
+    <main id="main"></main>
 
-   <script src="script.js"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
