--- a/28-toast-notification/index.html
+++ b/28-toast-notification/index.html
@@ -5,12 +5,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
    <link rel="stylesheet" href="style.css">
-   <title>Toast Notification</title>
+   <title>Toast Notifications</title>
 </head>
 <body>
    <div id="toasts"></div>
 
-   <button class="btn" id="button">Show Notification</button>
+  <button class="btn" id="button">Show Notification <i class="fas fa-arrow-right"></i></button>
 
    <script src="script.js"></script>
 </body>
