--- a/31_good_cheap_fast_checkboxes/index.html
+++ b/31_good_cheap_fast_checkboxes/index.html
@@ -5,30 +5,30 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Good, Cheap, Fast</title>
+   <title>Colored Checkbox UI</title>
 </head>
 <body>
-   <h2>How do you want your project to be?</h2>
+   <h2>How are you today?</h2>
    <div class="toggle-container">
-      <input type="checkbox" id="good" class="toggle">
+      <input type="checkbox" id="good" class="toggle good">
       <label for="good" class="label">
          <div class="ball"></div>
       </label>
       <span>Good</span>
    </div>
    <div class="toggle-container">
-      <input type="checkbox" id="cheap" class="toggle">
-      <label for="cheap" class="label">
+      <input type="checkbox" id="great" class="toggle great">
+      <label for="great" class="label">
          <div class="ball"></div>
       </label>
-      <span>Cheap</span>
+      <span>Great</span>
    </div>
    <div class="toggle-container">
-      <input type="checkbox" id="fast" class="toggle">
-      <label for="fast" class="label">
+      <input type="checkbox" id="amazing" class="toggle amazing">
+      <label for="amazing" class="label">
          <div class="ball"></div>
       </label>
-      <span>Fast</span>
+      <span>Amazing</span>
    </div>
 
    <script src="script.js"></script>
