--- a/32_notes_app/index.html
+++ b/32_notes_app/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -12,13 +11,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Notes App</title>
+    <title>Notepad App</title>
   </head>
   <body>
     <button class="add" id="add"><i class="fas fa-plus"></i> Add Note</button>
 
-    <!-- cdnjs: https://cdnjs.com/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/1.2.2/marked.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
