--- a/33-css-animated-countdown/index.html
+++ b/33-css-animated-countdown/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Animated Countdown</title>
+    <title>CSS Animated Countdown</title>
   </head>
   <body>
     <div class="counter">
