--- a/34_image_carousel/index.html
+++ b/34_image_carousel/index.html
@@ -3,22 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Image Carousel</title>
+    <title>Auto Image Carousel</title>
   </head>
   <body>
     <div class="carousel">
       <div class="image-container" id="imgs">
-        <img src="images/one.jpg" alt="first-image" />
-        <img src="images/two.jpg" alt="second-image" />
-        <img src="images/three.jpg" alt="third-image" />
-        <img src="images/four.jpg" alt="fourth-image" />
+        <img src="https://images.unsplash.com/photo-1710438399422-2fca27686bcd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MzJ8fHxlbnwwfHx8fHw%3D" alt="_" />
+        <img src="https://images.unsplash.com/photo-1707343844152-6d33a0bb32c3?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fHw%3D" alt="_" />
+        <img src="https://images.unsplash.com/photo-1710438399463-e7b374c2db9e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MzV8fHxlbnwwfHx8fHw%3D" alt="_" />
+        <img src="https://images.unsplash.com/photo-1709842665072-6404e47a5386?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8NTh8fHxlbnwwfHx8fHw%3D" alt="_" />
+        <img src="https://images.unsplash.com/photo-1710415273471-24431054c4da?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Njh8fHxlbnwwfHx8fHw%3D" alt="_" />
       </div>
       <div class="buttons-container">
         <button id="left" class="btn">Prev</button>
