Change title text

--- a/38_password_strength_background/index.html
+++ b/38_password_strength_background/index.html
@@ -20,14 +20,14 @@
     />
     <!-- Custom CSS Stylesheet -->
     <link rel="stylesheet" href="style.css" />
-    <title>Password Strength Background</title>
+    <title>Password Strength</title>
   </head>
   <body>
     <div class="background" id="background"></div>
     <div class="bg-white rounded p-10 text-center shadow-md">
-      <h1 class="text-3xl">Image Password Strength</h1>
+      <h1 class="text-3xl">Password Strength</h1>
       <p class="text-sm text-gray-700 mt-2">
-        Change the password to see the effect
+        Enter a password to see the effect
       </p>
 
       <div class="my-4 text-left">
