--- a/39_3D_background_boxes/index.html
+++ b/39_3D_background_boxes/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>3D Background Boxes</title>
+    <title>3D Box Effect</title>
   </head>
   <body>
     <button id="btn" class="magic">Magic <i class="fas fa-crown"></i></button>
