--- a/39-3d-box-effect/index.html
+++ b/39-3d-box-effect/index.html
@@ -14,7 +14,7 @@
     <title>3D Box Effect</title>
   </head>
   <body>
-    <button id="btn" class="magic">Magic <i class="fas fa-crown"></i></button>
+    <button id="btn" class="magic"><i class="fas fa-chevron-right"></i> Boxes</button>
     <div id="boxes" class="boxes"></div>
     <script src="script.js"></script>
   </body>
