--- a/40_verify_account_ui/index.html
+++ b/40_verify_account_ui/index.html
@@ -10,13 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Verify Account UI</title>
+    <title>Account Verification Card</title>
   </head>
   <body>
     <div class="container">
-      <h2>Verify Your Account</h2>
+      <h2>Please Verify Your Account</h2>
       <p>
-        We emailed you the six digit code to cool_guy@email.com <br />
         Enter the code below to confirm your email address.
       </p>
       <div class="code-container">
@@ -70,8 +69,7 @@
         />
       </div>
       <small class="info">
-        This is design only. We didn't actually send you an email as we don't
-        have your email, right?
+        This is a design only. We didn't actually send you an email.
       </small>
     </div>
     <script src="script.js"></script>
