--- a/36-pokedex-app/index.html
+++ b/36-pokedex-app/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Pokedex</title>
+    <title>Pokemon Cards</title>
   </head>
   <body>
-    <h1>Pokedex</h1>
+    <h1>Pokemon Cards</h1>
     <div class="poke-container" id="poke-container"></div>
     <script src="script.js"></script>
   </body>
