--- a/41_live_user_filter/index.html
+++ b/41_live_user_filter/index.html
@@ -3,19 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Live User Filter</title>
+    <title>Filter User</title>
   </head>
   <body>
     <div class="container">
       <header class="header">
-        <h4 class="title">Live User Filter</h4>
+        <h4 class="title">Filter User</h4>
         <small class="subtitle">Search by name and/or location</small>
         <input type="text" id="filter" placeholder="Search" />
       </header>
