Update index file

--- a/42_feedback_ui_design/index.html
+++ b/42_feedback_ui_design/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Let Us Know Your Feedback</title>
+    <title>Feedback Design</title>
   </head>
   <body>
     <div id="panel" class="panel-container">
@@ -20,17 +14,17 @@
       >
       <div class="ratings-container">
         <div class="rating" id="Unhappy">
-          <img src="images/unhappy.png" alt="Unhappy" />
+          <i class="fa-regular fa-face-meh-blank"></i>
           <small>Unhappy</small>
         </div>
 
         <div class="rating" id="Neutral">
-          <img src="images/neutral.png" alt="Neutral" />
+          <i class="fa-regular fa-smile"></i>
           <small>Neutral</small>
         </div>
 
         <div class="rating active" id="Satisfied">
-          <img src="images/satisfied.png" alt="Satisfied" />
+          <i class="fa-regular fa-face-grin-wide"></i>
           <small>Satisfied</small>
         </div>
       </div>
@@ -38,5 +32,6 @@
       <button class="btn" id="send">Send Review</button>
     </div>
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   </body>
 </html>
