Update index file

--- a/44_netflix_navigation/index.html
+++ b/44_netflix_navigation/index.html
@@ -10,44 +10,33 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Netflix Mobile Navigation</title>
+    <title>Navigation Menu</title>
   </head>
   <body>
     <button class="nav-btn open-btn">
       <i class="fas fa-bars"></i>
     </button>
 
-    <img
-      src="https://images.ctfassets.net/4cd45et68cgf/7LrExJ6PAj6MSIPkDyCO86/542b1dfabbf3959908f69be546879952/Netflix-Brand-Logo.png?w=684&h=456"
-      alt="Logo"
-      class="logo"
-    />
+    <p class="text">Navigation Menu</p>
+    <p class="context">Click the hamburger menu in the top left</p>
 
-    <p class="text">Mobile Navigation</p>
-
-    <div class="nav nav-black">
-      <div class="nav nav-red">
-        <div class="nav nav-white">
+    <div class="nav nav-one">
+      <div class="nav nav-two">
+        <div class="nav nav-three">
           <button class="nav-btn close-btn">
             <i class="fas fa-times"></i>
           </button>
 
-          <img
-            src="https://images.ctfassets.net/4cd45et68cgf/7LrExJ6PAj6MSIPkDyCO86/542b1dfabbf3959908f69be546879952/Netflix-Brand-Logo.png?w=684&h=456"
-            alt="Logo"
-            class="logo"
-          />
-
           <ul class="list">
-            <li><a href="#">Teams</a></li>
-            <li><a href="#">Locations</a></li>
-            <li><a href="#">Life at Netflix</a></li>
+            <li><a href="#">Section Heading</a></li>
+            <li><a href="#">Section Heading</a></li>
+            <li><a href="#">Section Heading</a></li>
             <li>
               <ul>
-                <li><a href="#">Netflix Culture Memo</a></li>
-                <li><a href="#">Work Life Balance</a></li>
-                <li><a href="#">Inclusion & Diversity</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Content Text</a></li>
+                <li><a href="#">Content Text</a></li>
+                <li><a href="#">Content Text</a></li>
+                <li><a href="#">Content Text</a></li>
               </ul>
             </li>
           </ul>
