Update index file

--- a/46_testimonial_box_switcher/index.html
+++ b/46_testimonial_box_switcher/index.html
@@ -18,22 +18,19 @@
       <div class="fas fa-quote-right fa-quote"></div>
       <div class="fas fa-quote-left fa-quote"></div>
       <p class="testimonial">
-        I've worked with literally hundreds of HTML/CSS developers and I have to
-        say the top spot goes to this guy. This guy is an amazing developer. He
-        stresses on good, clean code and pays heed to the details. I love
-        developers who respect each and every aspect of a throughly thought out
-        design and do their best to put it in code. He goes over and beyond and
-        transforms ART into PIXELS - without a glitch, every time.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi quia odit ipsum dolorum earum eos nostrum laudantium accusantium totam voluptatem nobis placeat, quaerat rem reprehenderit quasi esse, eum commodi.
+        Sapiente odio sunt provident, culpa deserunt quo voluptate doloremque eos temporibus itaque nihil facilis autem consequatur. Ea reiciendis obcaecati laborum maxime velit rerum repellat cupiditate, sint ullam, repellendus accusantium odio?
+        Deleniti eos dignissimos adipisci possimus. Aut cum consectetur eum quis, sequi perspiciatis nihil quos porro ducimus dolores dignissimos ad aspernatur fuga quae voluptas aperiam molestias itaque voluptate nostrum ut iusto.
       </p>
       <div class="user">
         <img
-          src="https://randomuser.me/api/portraits/women/46.jpg"
+          src="https://img.freepik.com/free-vector/blue-circle-with-white-user_78370-4707.jpg?size=626&ext=jpg&ga=GA1.1.1768666795.1710869349&semt=ais"
           alt="user"
           class="user-image"
         />
         <div class="user-details">
-          <h4 class="username">Miya Myles</h4>
-          <p class="role">Marketing</p>
+          <h4 class="username">[User Name]</h4>
+          <p class="role">[Position/Role]</p>
         </div>
       </div>
     </div>
