--- a/47_image_feed/index.html
+++ b/47_image_feed/index.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Random Image Feed</title>
+    <title>Image Gallery</title>
   </head>
   <body>
-    <h1>Random Image Feed</h1>
+    <h1 class="title">Image Gallery</h1>
 
     <div class="container"></div>
 
