--- a/50_simple_timer/index.html
+++ b/50_simple_timer/index.html
@@ -12,13 +12,10 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Simple Timer</title>
+    <title>Timer Design</title>
   </head>
   <body class="bg-gray-700 flex justify-center items-center min-h-screen">
-    <div class="bg-gray-900 p-16 rounded-2xl shadow w-full max-w-sm">
-      <!-- Label -->
-      <!-- <h1 class="text-white text-center text-4xl">Timer</h1> -->
-      <!-- Outer Circle -->
+    <div class="bg-gray-900 p-16 rounded-2xl shadow w-full max-w-sm card">
       <div
         id="conic"
         class="bg-conic flex justify-center items-center w-60 h-60 mx-auto my-10 rounded-full relative"
@@ -43,13 +40,13 @@
       <div class="flex justify-center gap-6">
         <button
           id="reset"
-          class="flex justify-center items-center w-10 h-10 bg-pink-300 rounded-full text-black"
+          class="flex justify-center items-center w-10 h-10 bg-pink-300 rounded-full text-black btn-style"
         >
           <i class="fas fa-sync"></i>
         </button>
         <button
           id="play"
-          class="flex justify-center items-center w-10 h-10 bg-pink-300 rounded-full text-black"
+          class="flex justify-center items-center w-10 h-10 bg-pink-300 rounded-full text-black btn-style"
         >
           <i class="fas fa-play"></i>
         </button>
