Link to JS file

--- a/51_animted_background/index.html
+++ b/51_animted_background/index.html
@@ -14,12 +14,6 @@
       <img src="img/police_car.gif" class="car1">
       <img src="img/police_car.gif" class="car2">
    </section>
-   <script>
-      const sun = document.querySelector('.sun')
-      const body = document.querySelector('body')
-      sun.onclick = function() {
-         body.classList.toggle('dark')
-      }
-   </script>
+   <script src="script.js"></script>
 </body>
 </html>
