--- a/52_css_3D_text/index.html
+++ b/52_css_3D_text/index.html
@@ -4,17 +4,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>CSS 3D Text</title>
+   <title>3D Text Effect</title>
 </head>
 <body>
-   <div id="text" data-text="Hello! My Name is Sidney Shafer.">Hello! My Name is Sidney Shafer.</div>
-   <script type="text/javascript">
-      var text = document.getElementById('text')
-      var shadow = '';
-      for(var i = 0; i < 25; i++) {
-         shadow +=(shadow? ',':'')+ -i * 1 +'px ' + i*1 + 'px 0 #d9d9d9';
-      }
-      text.style.textShadow = shadow
-   </script>
+   <div id="text" class="text" data-text="Hey you! ❤️">Hey you! ❤️</div>
+   <script src="script.js"> </script>
 </body>
 </html>
