--- a/53_direction_aware_image_hover/index.html
+++ b/53_direction_aware_image_hover/index.html
@@ -47,20 +47,6 @@
    </div>
 
    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
-   <script>
-      $(document).ready(function(){
-         $('.card').on('mouseenter', function(e){
-            x = e.pageX - $(this).offset().left,
-            y = e.pageY - $(this).offset().top
-            $(this).find('span').css({top:y, left:x})
-         })
-         $('.card').on('mouseout', function(e){
-            x = e.pageX - $(this).offset().left,
-            y = e.pageY - $(this).offset().top
-            $(this).find('span').css({top:y, left:x})
-         })
-      })
-   </script>
+   <script src="script.js"></script>
 </body>
 </html>
