--- a/53_direction_aware_image_hover/index.html
+++ b/53_direction_aware_image_hover/index.html
@@ -4,14 +4,14 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Direction-Aware Image Hover</title>
+   <title>Image Hover Effect</title>
 </head>
 <body>
    <div class="container">
       <div class="card">
          <span></span>
          <div class="imgBx">
-            <img src="/img/img1.jpg">
+            <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8bW91bnRhaW5zfGVufDB8fDB8fHww">
          </div>
          <div class="content">
             <div>
@@ -23,7 +23,7 @@
       <div class="card">
          <span></span>
          <div class="imgBx">
-            <img src="/img/img2.jpg">
+            <img src="https://plus.unsplash.com/premium_photo-1675827055620-24d540e0892a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8bmF0dXJlfGVufDB8fDB8fHww">
          </div>
          <div class="content">
             <div>
@@ -35,7 +35,7 @@
       <div class="card">
          <span></span>
          <div class="imgBx">
-            <img src="/img/img3.jpg">
+            <img src="https://images.unsplash.com/photo-1518549945153-64368b032957?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YmVhdXRpZnVsfGVufDB8fDB8fHww">
          </div>
          <div class="content">
             <div>
