Modify index file

--- a/55_glassmorphism_clock/index.html
+++ b/55_glassmorphism_clock/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Glassmorphism Clock</title>
+   <title>Clock</title>
 </head>
 <body>
    <div class="container">
@@ -23,23 +23,6 @@
       </div>
    </div>
 
-   <script>
-      const deg = 6
-      const hr = document.getElementById('hr')
-      const mn = document.getElementById('mn')
-      const sc = document.getElementById('sc')
-
-      setInterval(() => {
-         let day = new Date()
-         let hh = day.getHours() * 30
-         let mm = day.getMinutes() * deg
-         let ss = day.getSeconds() * deg
-
-         hr.style.transform = `rotateZ(${hh+(mm/12)}deg)`
-         mn.style.transform = `rotateZ(${(mm)}deg)`
-         sc.style.transform = `rotateZ(${(ss)}deg)`
-      })
-
-   </script>
+   <script src="script.js"></script>
 </body>
 </html>
