--- a/57_isometric_card_hover/index.html
+++ b/57_isometric_card_hover/index.html
@@ -4,13 +4,13 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Isometric Card Hover Effect | HTML & CSS Design</title>
+   <title>Isometric Card Hover</title>
 </head>
 <body>
    <div class="container">
       <div class="card">
          <div class="imgBx">
-            <img src="img/sketch.png">
+            <i class="fa-solid fa-pencil"></i>
             <h3>Design</h3>
          </div>
          <div class="content">
@@ -19,7 +19,7 @@
       </div>
       <div class="card">
          <div class="imgBx">
-            <img src="img/data.png">
+            <i class="fa-solid fa-code"></i>
             <h3>Code</h3>
          </div>
          <div class="content">
@@ -28,7 +28,7 @@
       </div>
       <div class="card">
          <div class="imgBx">
-            <img src="img/startup (1).png">
+            <i class="fa-solid fa-rocket"></i>
             <h3>Launch</h3>
          </div>
          <div class="content">
@@ -36,5 +36,6 @@
          </div>
       </div>
    </div>
+  <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
 </body>
 </html>
