--- a/58_parallax_text_scroll/index.html
+++ b/58_parallax_text_scroll/index.html
@@ -4,36 +4,31 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Parallax Text Scroll Effect | Mousemove</title>
+   <title>Text Scroll Effect</title>
 </head>
 <body>
    <section>
       <div class="text">
-         <h2 style="--i:0.5"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:0.5"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:1.5"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:1.5"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:2.5"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:2.5"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:2.25"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:2.25"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:1.25"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:1.25"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:0.75"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:0.75"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:3"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:3"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:0.35"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:0.35"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
 
-         <h2 style="--i:2.35"><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span><span>Happy Days</span></h2>
+         <h2 style="--i:2.35"><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span><span>DON'T PANIC</span></h2>
       </div>
    </section>
 
-   <script>
-      const position = document.documentElement
-      position.addEventListener('mousemove', e => {
-         position.style.setProperty('--x', e.clientX + 'px')
-      })
-   </script>
+   <script src="script.js"></script>
 </body>
 </html>
