--- a/61_responsive_card_hover/index.html
+++ b/61_responsive_card_hover/index.html
@@ -4,13 +4,13 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Responsive Card Hover Effects</title>
+   <title>Image Card Hover Effect</title>
 </head>
 <body>
    <div class="container">
       <div class="card">
          <div class="imgBx">
-            <img src="/img/gallery1.jpg">
+            <img src="https://images.unsplash.com/photo-1704072384017-788b1ccbaae5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTd8fHxlbnwwfHx8fHw%3D">
          </div>
          <div class="content">
             <h2>Image Title</h2>
@@ -19,7 +19,7 @@
       </div>
       <div class="card">
          <div class="imgBx">
-            <img src="/img/gallery2.jpg">
+            <img src="https://images.unsplash.com/photo-1708898816963-e1c1e5cf5068?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MXx8fGVufDB8fHx8fA%3D%3D">
          </div>
          <div class="content">
             <h2>Image Title</h2>
@@ -28,7 +28,7 @@
       </div>
       <div class="card">
          <div class="imgBx">
-            <img src="/img/gallery3.jpg">
+            <img src="https://images.unsplash.com/photo-1708898812518-648e6df9fa09?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MTB8fHxlbnwwfHx8fHw%3D">
          </div>
          <div class="content">
             <h2>Image Title</h2>
