--- a/63_3d_perespective_with_layered_image/index.html
+++ b/63_3d_perespective_with_layered_image/index.html
@@ -4,14 +4,14 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>3D Perspective With Layered Image Hover Effects</title>
+   <title>3D Layered Image Effect</title>
 </head>
 <body>
    <div class="container">
       <div class="imgBx">
-         <img src="img/img1.jpg">
-         <img src="img/img1.jpg">
-         <img src="img/img1.jpg">
+         <img src="https://images.unsplash.com/photo-1707929591972-43d4060c3377?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8fA%3D%3D">
+         <img src="https://images.unsplash.com/photo-1707929591972-43d4060c3377?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8fA%3D%3D">
+         <img src="https://images.unsplash.com/photo-1707929591972-43d4060c3377?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8fA%3D%3D">
       </div>
       <h2>Heading 1</h2>
       <div class="skew">
@@ -21,9 +21,9 @@
    </div>
    <div class="container">
       <div class="imgBx">
-         <img src="img/img2.jpg">
-         <img src="img/img2.jpg">
-         <img src="img/img2.jpg">
+         <img src="https://images.unsplash.com/photo-1707929592123-301aefd8af7a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8OXx8fGVufDB8fHx8fA%3D%3D">
+         <img src="https://images.unsplash.com/photo-1707929592123-301aefd8af7a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8OXx8fGVufDB8fHx8fA%3D%3D">
+         <img src="https://images.unsplash.com/photo-1707929592123-301aefd8af7a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8OXx8fGVufDB8fHx8fA%3D%3D">
       </div>
       <h2>Heading 1</h2>
       <div class="skew">
@@ -33,9 +33,9 @@
    </div>
    <div class="container">
       <div class="imgBx">
-         <img src="img/img3.jpg">
-         <img src="img/img3.jpg">
-         <img src="img/img3.jpg">
+         <img src="https://images.unsplash.com/photo-1707929591695-adb82ae3612c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MTd8fHxlbnwwfHx8fHw%3D">
+         <img src="https://images.unsplash.com/photo-1707929591695-adb82ae3612c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MTd8fHxlbnwwfHx8fHw%3D">
+         <img src="https://images.unsplash.com/photo-1707929591695-adb82ae3612c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MTd8fHxlbnwwfHx8fHw%3D">
       </div>
       <h2>Heading 1</h2>
       <div class="skew">
