--- a/64_3d_card_effect/index.html
+++ b/64_3d_card_effect/index.html
@@ -5,18 +5,18 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
-   <title>3D Card Effect</title>
+   <title>Shoe Product Card</title>
 </head>
 <body>
    <div class="container">
       <div class="card">
          <div class="sneaker">
             <div class="circle"></div>
-               <img src="./adidas_shoe.png" alt="adidas">
+               <img src="https://cdn.pixabay.com/photo/2013/07/13/11/47/low-shoe-158667_640.png" alt="shoe">
          </div>
          <div class="info">
-            <h1 class="title">Adidas ZX</h1>
-            <h3>FUTURE-READY TRAINERS WITH WRAPPED BOOST FOR EXCEPTION COMFORT.</h3>
+            <h1 class="title">Shoe Name</h1>
+            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit inventore quasi molestias ipsa sequi.</h3>
             <div class="sizes">
                <button>39</button>
                <button>40</button>
