--- a/06-scroll-animation-feature/index.html
+++ b/06-scroll-animation-feature/index.html
@@ -8,21 +8,22 @@
    <title>Scroll Animation</title>
 </head>
 <body>
-   <h1>Scroll To See Animation</h1>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
-   <div class="box"><h2>Content</h2></div>
+  <h1><em>Scroll To See Animation</em></h1>
+   <i class="fas fa-arrow-down"></i>
+  <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
+   <div class="box"><h2>content</h2></div>
 
    <script src="script.js"></script>
 </body>
