--- a/25-sticky-navbar/index.html
+++ b/25-sticky-navbar/index.html
@@ -4,12 +4,12 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Sticky Navbar</title>
+   <title>Landing Page with Sticky Navbar</title>
 </head>
 <body>
    <nav class="nav">
       <div class="container">
-         <h1 class="logo"><a href="index.html">My Website</a></h1>
+         <h1 class="logo"><a href="index.html">LOGO</a></h1>
          <ul>
             <li><a href="#" class="current">Home</a></li>
             <li><a href="#">About</a></li>
@@ -21,16 +21,22 @@
 
    <div class="hero">
       <div class="container">
-         <h1>Welcome To My Website</h1>
+         <h1>Website Landing Page</h1>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aliquid.</p>
       </div>
    </div>
 
    <section class="container content">
-      <h2>Content 1</h2>
+      <h2>CONTENT HEADING</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat praesentium at quos, ipsum non atque temporibus quisquam odit maxime magni qui earum officia alias harum architecto quibusdam laborum voluptatibus cumque ab sed totam perspiciatis. Cumque voluptate, dicta consectetur, deserunt quod ea totam vel veritatis, sequi quas suscipit at. Autem, sint, maxime accusamus veniam earum alias fugiat, nam facere porro repellat rerum amet vel commodi omnis vero! Explicabo unde modi aperiam labore ad illum aliquam ducimus ea, libero voluptate neque error veniam voluptates quos molestiae ex, ut magnam et sapiente fuga, impedit laboriosam! Dolor aut impedit omnis ullam temporibus beatae voluptatum!</p>
 
-      <h3>Content 2</h3>
+      <h3>CONTENT HEADING</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt molestiae nobis error quae dolorum ipsam id laborum mollitia. Ad vel consectetur enim natus deserunt facere, officiis impedit dicta accusantium cumque dolorum suscipit quia rerum, temporibus sit vero accusamus laudantium. Beatae tempora officia sapiente ducimus a ab dolorum consectetur! Soluta sapiente architecto quos rem animi a officia nihil illo tempore consequatur vitae dolores ipsa, voluptatibus, corrupti modi deleniti maxime sunt amet hic assumenda corporis adipisci dicta?</p>
+
+      <h3>CONTENT HEADING</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt molestiae nobis error quae dolorum ipsam id laborum mollitia. Ad vel consectetur enim natus deserunt facere, officiis impedit dicta accusantium cumque dolorum suscipit quia rerum, temporibus sit vero accusamus laudantium. Beatae tempora officia sapiente ducimus a ab dolorum consectetur! Soluta sapiente architecto quos rem animi a officia nihil illo tempore consequatur vitae dolores ipsa, voluptatibus, corrupti modi deleniti maxime sunt amet hic assumenda corporis adipisci dicta?</p>
+
+      <h3>CONTENT HEADING</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt molestiae nobis error quae dolorum ipsam id laborum mollitia. Ad vel consectetur enim natus deserunt facere, officiis impedit dicta accusantium cumque dolorum suscipit quia rerum, temporibus sit vero accusamus laudantium. Beatae tempora officia sapiente ducimus a ab dolorum consectetur! Soluta sapiente architecto quos rem animi a officia nihil illo tempore consequatur vitae dolores ipsa, voluptatibus, corrupti modi deleniti maxime sunt amet hic assumenda corporis adipisci dicta?</p>
    </section>
 
