--- a/01-expanding-image-cards/index.html
+++ b/01-expanding-image-cards/index.html
@@ -4,31 +4,31 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Expanding Image Cards</title>
+   <title>Expanding Cards</title>
 </head>
 <body>
   <p>Click an image to expand</p>
    <div class="container">
       <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1501555088652-021faa106b9b?q=80&w=2673&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>Explore Nature</h3>
+         <h3>Image Title</h3>
       </div>
       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1594220862488-117b78382514?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>Endless Fields</h3>
+         <h3>Image Title</h3>
       </div>
       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=2673&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>Beach Sunsets</h3>
+         <h3>Image Title</h3>
       </div>
       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>See the World</h3>
+         <h3>Image Title</h3>
       </div>
       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>Rainy Outdoors</h3>
+         <h3>Image Title</h3>
       </div>
       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1454496522488-7a8e488e8606?q=80&w=2676&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>Mountain Range</h3>
+         <h3>Image Title</h3>
       </div>
       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1519378058457-4c29a0a2efac?q=80&w=2608&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-         <h3>Beautiful Flowers</h3>
+         <h3>Image Title</h3>
       </div>
    </div>
 
