--- a/63-movie-seat-booking/index.html
+++ b/63-movie-seat-booking/index.html
@@ -19,7 +19,7 @@
 
   <ul class="showcase">
     <li>
-      <div class="seat"></div>
+      <div class="seat n-a"></div>
       <small>N/A</small>
     </li>
     <li>
@@ -44,24 +44,6 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
-    </div>
-    <div class="row">
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat occupied"></div>
-      <div class="seat occupied"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-    </div>
-    <div class="row">
-      <div class="seat occupied"></div>
-      <div class="seat"></div>
-      <div class="seat occupied"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
     </div>
@@ -70,8 +52,34 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat occupied"></div>
       <div class="seat"></div>
       <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat occupied"></div>
       <div class="seat occupied"></div>
       <div class="seat occupied"></div>
     </div>
@@ -84,8 +92,11 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
     </div>
     <div class="row">
+      <div class="seat"></div>
       <div class="seat occupied"></div>
       <div class="seat occupied"></div>
       <div class="seat"></div>
@@ -93,12 +104,14 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
+      <div class="seat occupied"></div>
       <div class="seat occupied"></div>
     </div>
   </div>
 
-  <p class="text">You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span></p>
+  <p class="text">You selected <span id="count">0</span> seats for a price of $<span id="total">0</span></p>
 
+  <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
