Add script tags to index.html

--- a/64-exchange-rate-calc/index.html
+++ b/64-exchange-rate-calc/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   
+  <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 </html>
