--- a/64-exchange-rate-calc/index.html
+++ b/64-exchange-rate-calc/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Exchange Rate Calculator</h1>
   <i class="fa-solid fa-arrow-right-arrow-left"></i>
-  <p>Choose amount and currency to get exchange rate</p>
+  <p>Select an amount and currency to get exchange rate</p>
 
   <div class="container">
     <div class="currency">
@@ -72,7 +72,7 @@
     </div>
 
     <div class="swap-rate-container">
-      <button class="btn" id="rate">
+      <button class="btn" id="swap">
         Swap
       </button>
       <div class="rate" id="rate"></div>
