Update index.html file

--- a/65-array-methods-ui/index.html
+++ b/65-array-methods-ui/index.html
@@ -7,6 +7,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Array Methods UI</h1>
+
+  <div class="container">
+    <aside>
+      <button id="add-user">Add User 👋</button>
+      <button id="double">Double Money 💸</button>
+      <button id="show-millionaires">Show Millionaires 💎</button>
+      <button id="sort">Sort By Richest 🤑</button>
+      <button id="calculate-wealth">Calculate Entire Wealth 💲</button>
+    </aside>
+
+    <main id="main">
+      <h2><strong>Individual</strong> Wealth</h2>
+    </main>
+  </div>
+
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
