Rename project folder

--- a/65-random-user-actions/index.html
+++ b/65-random-user-actions/index.html
@@ -7,15 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Array Methods UI</h1>
 
   <div class="container">
     <aside>
       <button id="add-user">Add User 👋</button>
       <button id="double">Double Money 💸</button>
       <button id="show-millionaires">Show Millionaires 💎</button>
-      <button id="sort">Sort By Richest 🤑</button>
-      <button id="calculate-wealth">Calculate Entire Wealth 💲</button>
+      <button id="sort">Sort By Richest 💲</button>
+      <button id="calculate-wealth">Calculate Entire Wealth 💡</button>
     </aside>
 
     <main id="main">
