Modify text displayed in button

--- a/65-random-user-actions/index.html
+++ b/65-random-user-actions/index.html
@@ -14,7 +14,7 @@
       <button id="double">Double Money 💸</button>
       <button id="show-millionaires">Show Millionaires 💎</button>
       <button id="sort">Sort By Richest 💲</button>
-      <button id="calculate-wealth">Calculate Entire Wealth 💡</button>
+      <button id="calculate-wealth">Calculate Wealth 💡</button>
     </aside>
 
     <main id="main">
