--- a/66-menu-modal-landing-page/index.html
+++ b/66-menu-modal-landing-page/index.html
@@ -61,23 +61,23 @@
         <h3>Sign Up</h3>
       </div>
       <div class="modal-content">
-        <p>Register with us to get offers, support, and more...</p>
+        <p>Register with us to get offers, support, and more.</p>
         <form class="modal-form">
           <div>
             <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter name">
+            <input type="text" id="name" placeholder="Enter name" class="form-input">
           </div>
           <div>
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter email">
+            <input type="email" id="email" placeholder="Enter email" class="form-input">
           </div>
           <div>
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter password">
+            <input type="password" id="password" placeholder="Enter password" class="form-input">
           </div>
           <div>
             <label for="confirm">Confirm Password</label>
-            <input type="password" id="confirm" placeholder="Confirm password">
+            <input type="password" id="confirm" placeholder="Confirm password" class="form-input">
           </div>
           <input type="submit" value="Submit" class="submit-btn">
         </form>
