--- a/66-menu-modal-landing-page/index.html
+++ b/66-menu-modal-landing-page/index.html
@@ -32,20 +32,20 @@
   </header>
 
   <div class="container">
-    <h2>What is this Landing Page About?</h2>
+    <h2>Section Heading</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, beatae distinctio praesentium illo enim fugit expedita sint dolorum earum eius laborum at dolor, vero assumenda. Ducimus non optio amet inventore.</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto doloremque libero iste aspernatur, quo iure nobis alias voluptatem. Laborum, numquam?</p>
 
-    <h2>Tell Me More</h2>
+    <h2>Section Heading</h2>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quisquam fugit consectetur, fugiat quod soluta, quia illo voluptatem atque autem a magnam quos debitis eum minus rerum esse tempore eius ab cumque officiis dolor. Enim est magnam earum corporis omnis.</p>
 
-    <h2>Benefits</h2>
+    <h2>Content</h2>
     <ul>
-      <li>Lifetime Access</li>
-      <li>30 Day Money Back</li>
-      <li>Tailored Customer Support</li>
+      <li>Lorem ipsum dolor sit.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem, ipsum dolor.</li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quas iure et autem exercitationem inventore. Error repellendus qui fugiat, iusto repudiandae dolorem placeat quibusdam distinctio voluptates ullam doloremque earum. Recusandae sed incidunt doloremque? Tenetur sapiente saepe provident, blanditiis sit aliquam doloribus officia deserunt, aliquid totam porro eligendi alias, nam corporis facilis! Fuga aliquid saepe non natus quas quaerat repellat, necessitatibus sapiente temporibus libero quae, fugit, facilis ipsa culpa velit quod.</p>
