--- a/67-hangman/index.html
+++ b/67-hangman/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <h1>Hangman</h1>
-  <p>Enter a letter to find the hidden word!</p>
   <div class="game-container">
     <svg height="250" width="200" class="figure-container">
       <!-- Rod -->
@@ -35,25 +34,17 @@
 
     <!-- Wrong letters container -->
     <div class="wrong-letters-container">
-      <div id="wrong-letters">
-        <span>e,r,t,y</span>
-      </div>
+      <div id="wrong-letters"></div>
     </div>
 
     <!-- Container for word to guess -->
-    <div class="word" id="word">
-      <div class="letter">h</div>
-      <div class="letter">e</div>
-      <div class="letter">l</div>
-      <div class="letter">l</div>
-      <div class="letter">o</div>
-    </div>
+    <div class="word" id="word"></div>
   </div>
 
   <!-- Container for final messages -->
   <div class="popup-container" id="popup-container">
     <div class="popup">
-      <h2 id="final-message">You Won!</h2>
+      <h2 id="final-message"></h2>
       <button id="play-btn">Play Again</button>
     </div>
   </div>
