Fix bug in index.html

--- a/68-recipe-finder/index.html
+++ b/68-recipe-finder/index.html
@@ -20,11 +20,11 @@
         <i class="fas fa-random"></i>
       </button>
     </div>
+    <p class="error-text" id="error">Please enter a search term</p>
 
-    <div id="result-heading">
-      <div id="recipes" class="recipes"></div>
-      <div id="single-recipe"></div>
-    </div>
+    <div id="result-heading"></div>
+    <div id="recipes" class="recipes"></div>
+    <div id="single-recipe"></div>
   </div>
   
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
