Remove data in html code that is rendered by javascript

--- a/69-expense-tracker/index.html
+++ b/69-expense-tracker/index.html
@@ -25,18 +25,13 @@
     </div>
 
     <h3>History</h3>
-    <ul id="list" class="list">
-      <li class="minus">Coffee 
-        </span><span>-$20
-        <button class="delete-btn">x</button>
-      </li>
-    </ul>
+    <ul id="list" class="list"> </ul>
 
     <h3>Add New Transaction</h3>
     <form id="form">
       <div class="form-control">
-        <label for="text">Description</label>
-        <input type="text" id="text" placeholder="Enter description...">
+        <label for="description">Description</label>
+        <input type="text" id="description" placeholder="Enter description...">
       </div>
       <div class="form-control">
         <label for="amount">Amount <br/>
