--- a/76-infinite-scroll-posts/index.html
+++ b/76-infinite-scroll-posts/index.html
@@ -10,7 +10,7 @@
   <h1>Blog Posts</h1>
 
   <div class="filter-container">
-    <input type="text" id="filter" class="filter" placeholder="Filter blog posts...">
+    <input type="text" id="filter" class="filter" placeholder="Search blog posts...">
   </div>
 
   <div id="post-container">
