Modify id attribute for end-game container

--- a/77-typing-game/index.html
+++ b/77-typing-game/index.html
@@ -37,7 +37,7 @@
       Score: <span id="score" class="score">0</span>
     </p>
 
-    <div id="end-game-container" class="end-game-container"></div>
+    <div id="end-game" class="end-game-container"></div>
   </div>
   
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
