--- a/78-speech-text-reader/index.html
+++ b/78-speech-text-reader/index.html
@@ -7,6 +7,22 @@
   <title>Speech Text Reader</title>
 </head>
 <body>
+  <div class="container">
+
+    <button id="toggle" class="btn btn-toggle">
+      Toggle Text Box
+    </button>
+
+    <div id="text-box" class="text-box">
+      <div id="close" class="close"><i class="fa-solid fa-xmark"></i></div>
+      <h3>Choose Voice</h3>
+      <select id="voices"></select>
+      <textarea id="text" placeholder="Enter text to read..."></textarea>
+      <button class="btn" id="read">Read Text</button>
+    </div>
+
+    <main></main>
+  </div>
   
   <script src="https://kit.fontawesome.com/2006a997ee.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
